Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13729

list_add corruption messages seen in a stack trace seen while trying to mount OST

XMLWordPrintable

    • 3
    • 9223372036854775807

      Jun 27 11:12:55 es18ke-vm08-ib kernel: WARNING: CPU: 2 PID: 4758 at lib/list_debug.c:29 __list_add+0x65/0xc0
      Jun 27 11:12:55 es18ke-vm08-ib kernel: list_add corruption. next->prev should be prev (ffffffffc14d3df0), but was ffffffffc14d4
      138. (next=ffffffffc14d3df0).
      Jun 27 11:12:55 es18ke-vm08-ib kernel: Modules linked in: osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) lustre(OE) lmv(OE) mdc(OE) osc
      (OE) lov(OE) fid(OE) fld(OE) ko2iblnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) libcfs(OE) rdma_ucm(OE) ib_ucm(OE) rdma_cm(OE) iw_cm
      (OE) ib_ipoib(OE) ib_cm(OE) ib_umad(OE) mlx5_ib(OE) ib_uverbs(OE) mlx4_en(OE) mlx4_ib(OE) ib_core(OE) mlx4_core(OE) sunrpc iTCO
      _wdt iTCO_vendor_support ppdev nfit libnvdimm iosf_mbi crc32_pclmul ghash_clmulni_intel aesni_intel lrw gf128mul glue_helper ab
      lk_helper cryptd pcspkr i2c_i801 joydev lpc_ich parport_pc sg parport i6300esb ip_tables ext4 mbcache jbd2 sd_mod sr_mod cdrom
      crc_t10dif crct10dif_generic ahci virtio_net virtio_blk virtio_scsi(OE) bochs_drm libahci drm_kms_helper libata syscopyarea sys
      fillrect sysimgblt fb_sys_fops ttm drm mlx5_core(OE) crct10dif_pclmul crct10dif_common
      Jun 27 11:12:55 es18ke-vm08-ib kernel: crc32c_intel serio_raw mlxfw(OE) ptp pps_core devlink virtio_pci igbvf virtio_ring mlx_
      compat(OE) virtio drm_panel_orientation_quirks dm_mirror dm_region_hash dm_log dm_mod
      Jun 27 11:12:55 es18ke-vm08-ib kernel: CPU: 2 PID: 4758 Comm: mount.lustre Kdump: loaded Tainted: G OE ------------
      T 3.10.0-1062.18.1.el7_lustre.ddn4.x86_64 #1
      Jun 27 11:12:55 es18ke-vm08-ib kernel: Hardware name: DDN SFA18KE, BIOS rel-1.12.1-0-ga5cab58e9a3f-prebuilt.qemu.org 04/01/2014
      Jun 27 11:12:55 es18ke-vm08-ib kernel: Call Trace:
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffff84d7b416>] dump_stack+0x19/0x1b
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffff8469bab8>] __warn+0xd8/0x100
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffff8469bb3f>] warn_slowpath_fmt+0x5f/0x80
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffff849a17d5>] __list_add+0x65/0xc0
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffffc149d0c0>] iam_format_register+0x20/0x30 [osd_ldiskfs]
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffffc14a1ef5>] iam_lvar_format_init+0x15/0x20 [osd_ldiskfs]
      Jun 27 11:12:55 es18ke-vm08-ib kernel: [<ffffffffc149d295>] iam_container_setup+0xc5/

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: